<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/board"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/activity_main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/activity_main_title"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-50dp"
            android:layout_marginLeft="50dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/activity_main_baby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:src="@drawable/boy" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/activity_main_baby"
                android:src="@drawable/girl" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dp"
            android:layout_weight="3"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/activity_main_letters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/activity_main_letters"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/activity_main_digits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/activity_main_digits"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/activity_main_colors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/activity_main_colors"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/activity_main_dictionary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/activity_main_dictionary"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/activity_main_audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/activity_main_audio"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/activity_main_poems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/activity_main_poems"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
